--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -20,9 +20,6 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Install dumb-init to handle signals properly
-RUN apk add --no-cache dumb-init
-
 # Copy package files
 COPY package*.json ./
 
@@ -39,8 +36,5 @@ EXPOSE 4000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:4000/api/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
 
-# Use dumb-init to properly handle signals
-ENTRYPOINT ["/usr/sbin/dumb-init", "--"]
-
-# Start the app
+# Start the app directly with Node (Alpine has PID 1 signal handling)
 CMD ["node", "server/dist/index.js"]
