--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server:dev": "tsx watch server/src/index.ts",
-    "server:build": "tsc -p server/tsconfig.json",
+    "server:build": "tsc -p server/tsconfig.json && node fix-esm-imports.js",
     "server:start": "node server/dist/index.js"
   },
   "dependencies": {
