--- a/nginx.conf.example
+++ b/nginx.conf.example
@@ -64,7 +64,32 @@ server {
         proxy_read_timeout 60s;
     }
 
-    # Frontend (React SPA)
+    # Cache static assets first
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        proxy_pass http://messagereader_frontend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Deny access to sensitive files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    location ~ /\.env {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Frontend (React SPA) - catch all
     location / {
         proxy_pass http://messagereader_frontend;
         proxy_http_version 1.1;
@@ -73,23 +98,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # SPA: serve index.html for all non-file requests
+        # Try to serve files directly, or serve index.html for SPA routing
+        proxy_intercept_errors on;
         error_page 404 =200 /index.html;
-        
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-    }
-
-    # Deny access to sensitive files
-    location ~ /\. {
-        deny all;
-    }
-
-    location ~ /\.env {
-        deny all;
     }
 
     # Logging
