--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,8 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_SSH_PORT || 22 }}
-          script_stop: true
+          port: ${{ secrets.VPS_SSH_PORT }}
+          debug: true
           script: |
             echo "=== Starting MessageReader Deployment ==="
             echo "Time: $(date)"
