--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,26 +93,12 @@ jobs:
             
             echo "=== Deployment completed successfully ==="
 
-      - name: Notify deployment success
-        if: success()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '✅ Deployment successful to https://cloudjeans-admin.ddns.net/'
-            })
-
-      - name: Notify deployment failure
-        if: failure()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '❌ Deployment failed. Check workflow logs for details.'
-            })
+      - name: Deployment Status
+        if: always()
+        run: |
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "✅ Deployment successful!"
+            echo "🌐 App: https://cloudjeans-admin.ddns.net/"
+          else
+            echo "❌ Deployment failed!"
+          fi
