--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,6 +3,18 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Accept build args for environment variables
+ARG VITE_API_URL=http://localhost:4000
+ARG VITE_WHATSAPP_WEBHOOK_URL
+ARG VITE_WHATSAPP_WEBHOOK_USER
+ARG VITE_WHATSAPP_WEBHOOK_PASSWORD
+
+# Set environment variables for build
+ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_WHATSAPP_WEBHOOK_URL=$VITE_WHATSAPP_WEBHOOK_URL
+ENV VITE_WHATSAPP_WEBHOOK_USER=$VITE_WHATSAPP_WEBHOOK_USER
+ENV VITE_WHATSAPP_WEBHOOK_PASSWORD=$VITE_WHATSAPP_WEBHOOK_PASSWORD
+
 # Copy package files
 COPY package*.json ./
 
