--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.frontend
+      args:
+        VITE_API_URL: ${VITE_API_URL:-http://localhost:4000}
+        VITE_WHATSAPP_WEBHOOK_URL: ${VITE_WHATSAPP_WEBHOOK_URL}
+        VITE_WHATSAPP_WEBHOOK_USER: ${VITE_WHATSAPP_WEBHOOK_USER}
+        VITE_WHATSAPP_WEBHOOK_PASSWORD: ${VITE_WHATSAPP_WEBHOOK_PASSWORD}
     container_name: messagereader-frontend
     ports:
       - "3002:3002"
     restart: unless-stopped
     networks:
       - messagereader-network
-    environment:
-      - VITE_API_URL=http://localhost:4000
-      - VITE_WHATSAPP_WEBHOOK_URL=https://n8n-boutique.duckdns.org/webhook/send-whatsapp
-      - VITE_WHATSAPP_WEBHOOK_USER=MessageReaderApp
-      - VITE_WHATSAPP_WEBHOOK_PASSWORD=Snorker84*
     labels:
       - "com.example.description=MessageReader Frontend"
     healthcheck:
