--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "server:start": "node server/dist/index.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.48.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "bcryptjs": "^2.4.3",
@@ -42,13 +43,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/bcryptjs": "^2.4.6",
-  "@types/cookie-parser": "^1.4.7",
-  "@types/cors": "^2.8.17",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-  "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
