agregando variable para el analisis de imagenes

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -8,12 +8,14 @@ ARG VITE_API_URL=http://localhost:4000
 ARG VITE_WHATSAPP_WEBHOOK_URL
 ARG VITE_WHATSAPP_WEBHOOK_USER
 ARG VITE_WHATSAPP_WEBHOOK_PASSWORD
+ARG VITE_IMAGE_ANALYSIS_START_URL
 
 # Set environment variables for build
 ENV VITE_API_URL=$VITE_API_URL
 ENV VITE_WHATSAPP_WEBHOOK_URL=$VITE_WHATSAPP_WEBHOOK_URL
 ENV VITE_WHATSAPP_WEBHOOK_USER=$VITE_WHATSAPP_WEBHOOK_USER
 ENV VITE_WHATSAPP_WEBHOOK_PASSWORD=$VITE_WHATSAPP_WEBHOOK_PASSWORD
+ENV VITE_IMAGE_ANALYSIS_START_URL=$VITE_IMAGE_ANALYSIS_START_URL
 
 # Copy package files
 COPY package*.json ./
