fixes de variables de entorno

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -34,6 +34,20 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# Re-declare build arguments needed at runtime for debugging/visibility
+ARG VITE_API_URL
+ARG VITE_WHATSAPP_WEBHOOK_URL
+ARG VITE_WHATSAPP_WEBHOOK_USER
+ARG VITE_WHATSAPP_WEBHOOK_PASSWORD
+ARG VITE_IMAGE_ANALYSIS_START_URL
+
+# Surface configuration for runtime inspection (values already baked into bundle at build time)
+ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_WHATSAPP_WEBHOOK_URL=$VITE_WHATSAPP_WEBHOOK_URL
+ENV VITE_WHATSAPP_WEBHOOK_USER=$VITE_WHATSAPP_WEBHOOK_USER
+ENV VITE_WHATSAPP_WEBHOOK_PASSWORD=$VITE_WHATSAPP_WEBHOOK_PASSWORD
+ENV VITE_IMAGE_ANALYSIS_START_URL=$VITE_IMAGE_ANALYSIS_START_URL
+
 # Install a simple HTTP server to serve static files
 RUN npm install -g serve
 
