fixes in environment frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         VITE_WHATSAPP_WEBHOOK_URL: ${VITE_WHATSAPP_WEBHOOK_URL}
         VITE_WHATSAPP_WEBHOOK_USER: ${VITE_WHATSAPP_WEBHOOK_USER}
         VITE_WHATSAPP_WEBHOOK_PASSWORD: ${VITE_WHATSAPP_WEBHOOK_PASSWORD}
+        VITE_IMAGE_ANALYSIS_START_URL: ${VITE_IMAGE_ANALYSIS_START_URL:-}
     container_name: messagereader-frontend
     ports:
       - "3002:3002"
